SPO2/ast/parser.output
Terminals which are not used

   OTHER


State 26 conflicts: 2 shift/reduce
State 32 conflicts: 1 shift/reduce
State 50 conflicts: 2 shift/reduce
State 62 conflicts: 2 shift/reduce
State 82 conflicts: 1 shift/reduce
State 92 conflicts: 2 shift/reduce
State 136 conflicts: 2 shift/reduce
State 158 conflicts: 2 shift/reduce


Grammar

    0 $accept: source $end

    1 source: source_item_set

    2 source_item: func_def

    3 source_item_set: source_item
    4                | source_item_set source_item

    5 func_def: DEF func_signature statement_set END
    6         | DEF func_signature END

    7 statement: selection_statement
    8          | iteration_statement
    9          | BREAK ';'
   10          | assignment_expr ';'
   11          | block_statement

   12 statement_set: statement
   13              | statement_set statement

   14 in_block_set: statement
   15             | source_item
   16             | in_block_set statement
   17             | in_block_set source_item

   18 selection_statement: IF assignment_expr THEN statement ELSE statement
   19                    | IF assignment_expr THEN statement

   20 iteration_statement: WHILE assignment_expr statement_set END
   21                    | WHILE assignment_expr END
   22                    | UNTIL assignment_expr statement_set END
   23                    | UNTIL assignment_expr END
   24                    | statement WHILE assignment_expr ';'
   25                    | statement UNTIL assignment_expr ';'

   26 block_statement: BEGIN_T in_block_set END
   27                | BEGIN_T in_block_set '}'
   28                | '{' in_block_set END
   29                | '{' in_block_set '}'
   30                | BEGIN_T END
   31                | BEGIN_T '}'
   32                | '{' END
   33                | '{' '}'

   34 slice_range: assignment_expr
   35            | assignment_expr '.' '.' assignment_expr

   36 slice_range_list: slice_range
   37                 | slice_range_list ',' slice_range

   38 primary_expr: identifier
   39             | literal
   40             | '(' assignment_expr ')'

   41 postfix_expr: primary_expr
   42             | postfix_expr EMPTY_BRACKETS
   43             | postfix_expr '(' argument_expr_list ')'
   44             | postfix_expr '[' slice_range_list ']'

   45 argument_expr_list: assignment_expr
   46                   | argument_expr_list ',' assignment_expr

   47 unary_expr: postfix_expr
   48           | unary_operator unary_expr

   49 multiplicative_expr: unary_expr
   50                    | multiplicative_expr '*' unary_expr
   51                    | multiplicative_expr '/' unary_expr
   52                    | multiplicative_expr '%' unary_expr

   53 additive_expr: multiplicative_expr
   54              | additive_expr '+' multiplicative_expr
   55              | additive_expr '-' multiplicative_expr

   56 relational_expr: additive_expr
   57                | relational_expr '<' additive_expr
   58                | relational_expr '>' additive_expr
   59                | relational_expr LE_OP additive_expr
   60                | relational_expr GE_OP additive_expr

   61 equality_expr: relational_expr
   62              | equality_expr EQ_OP relational_expr
   63              | equality_expr NE_OP relational_expr

   64 logical_and_expr: equality_expr
   65                 | logical_and_expr AND_OP equality_expr

   66 logical_or_expr: logical_and_expr
   67                | logical_or_expr OR_OP logical_and_expr

   68 assignment_expr: logical_or_expr
   69                | postfix_expr assignment_operator assignment_expr

   70 assignment_operator: '='

   71 unary_operator: UMINUS

   72 literal: BOOL_VAL
   73        | STRING_VAL
   74        | CHAR_VAL
   75        | HEX_VAL
   76        | BITS_VAL
   77        | DEC_VAL

   78 func_signature: identifier '(' arg_def_list ')'
   79               | identifier EMPTY_BRACKETS
   80               | identifier '(' arg_def_list ')' OF type_ref
   81               | identifier EMPTY_BRACKETS OF type_ref

   82 arg_def_list: arg_def
   83             | arg_def_list ',' arg_def

   84 arg_def: identifier
   85        | identifier OF type_ref

   86 type_ref: builtin
   87         | identifier
   88         | array

   89 array: builtin ARRAY '[' DEC_VAL ']'
   90      | identifier ARRAY '[' DEC_VAL ']'

   91 builtin: BOOL
   92        | BYTE
   93        | INT
   94        | UINT
   95        | LONG
   96        | ULONG
   97        | CHAR
   98        | STRING

   99 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'%' (37) 52
'(' (40) 40 43 78 80
')' (41) 40 43 78 80
'*' (42) 50
'+' (43) 54
',' (44) 37 46 83
'-' (45) 55
'.' (46) 35
'/' (47) 51
';' (59) 9 10 24 25
'<' (60) 57
'=' (61) 70
'>' (62) 58
'[' (91) 44 89 90
']' (93) 44 89 90
'{' (123) 28 29 32 33
'}' (125) 27 29 31 33
error (256)
OTHER (258)
IDENTIFIER (259) 99
EMPTY_BRACKETS (260) 42 79 81
ARRAY (261) 89 90
OF (262) 80 81 85
IF (263) 18 19
THEN (264) 18 19
ELSE (265) 18
BEGIN_T (266) 26 27 30 31
END (267) 5 6 20 21 22 23 26 28 30 32
WHILE (268) 20 21 24
UNTIL (269) 22 23 25
BREAK (270) 9
DEF (271) 5 6
AND_OP (272) 65
OR_OP (273) 67
LE_OP (274) 59
GE_OP (275) 60
EQ_OP (276) 62
NE_OP (277) 63
UMINUS (278) 71
BOOL_VAL (279) 72
STRING_VAL (280) 73
CHAR_VAL (281) 74
HEX_VAL (282) 75
BITS_VAL (283) 76
DEC_VAL (284) 77 89 90
BOOL (285) 91
BYTE (286) 92
INT (287) 93
UINT (288) 94
LONG (289) 95
ULONG (290) 96
CHAR (291) 97
STRING (292) 98
LOWER_THAN_ELSE (293)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
source (57)
    on left: 1, on right: 0
source_item (58)
    on left: 2, on right: 3 4 15 17
source_item_set (59)
    on left: 3 4, on right: 1 4
func_def (60)
    on left: 5 6, on right: 2
statement (61)
    on left: 7 8 9 10 11, on right: 12 13 14 16 18 19 24 25
statement_set (62)
    on left: 12 13, on right: 5 13 20 22
in_block_set (63)
    on left: 14 15 16 17, on right: 16 17 26 27 28 29
selection_statement (64)
    on left: 18 19, on right: 7
iteration_statement (65)
    on left: 20 21 22 23 24 25, on right: 8
block_statement (66)
    on left: 26 27 28 29 30 31 32 33, on right: 11
slice_range (67)
    on left: 34 35, on right: 36 37
slice_range_list (68)
    on left: 36 37, on right: 37 44
primary_expr (69)
    on left: 38 39 40, on right: 41
postfix_expr (70)
    on left: 41 42 43 44, on right: 42 43 44 47 69
argument_expr_list (71)
    on left: 45 46, on right: 43 46
unary_expr (72)
    on left: 47 48, on right: 48 49 50 51 52
multiplicative_expr (73)
    on left: 49 50 51 52, on right: 50 51 52 53 54 55
additive_expr (74)
    on left: 53 54 55, on right: 54 55 56 57 58 59 60
relational_expr (75)
    on left: 56 57 58 59 60, on right: 57 58 59 60 61 62 63
equality_expr (76)
    on left: 61 62 63, on right: 62 63 64 65
logical_and_expr (77)
    on left: 64 65, on right: 65 66 67
logical_or_expr (78)
    on left: 66 67, on right: 67 68
assignment_expr (79)
    on left: 68 69, on right: 10 18 19 20 21 22 23 24 25 34 35 40 45
    46 69
assignment_operator (80)
    on left: 70, on right: 69
unary_operator (81)
    on left: 71, on right: 48
literal (82)
    on left: 72 73 74 75 76 77, on right: 39
func_signature (83)
    on left: 78 79 80 81, on right: 5 6
arg_def_list (84)
    on left: 82 83, on right: 78 80 83
arg_def (85)
    on left: 84 85, on right: 82 83
type_ref (86)
    on left: 86 87 88, on right: 80 81 85
array (87)
    on left: 89 90, on right: 88
builtin (88)
    on left: 91 92 93 94 95 96 97 98, on right: 86 89
identifier (89)
    on left: 99, on right: 38 78 79 80 81 84 85 87 90


state 0

    0 $accept: . source $end

    DEF  shift, and go to state 1

    source           go to state 2
    source_item      go to state 3
    source_item_set  go to state 4
    func_def         go to state 5


state 1

    5 func_def: DEF . func_signature statement_set END
    6         | DEF . func_signature END

    IDENTIFIER  shift, and go to state 6

    func_signature  go to state 7
    identifier      go to state 8


state 2

    0 $accept: source . $end

    $end  shift, and go to state 9


state 3

    3 source_item_set: source_item .

    $default  reduce using rule 3 (source_item_set)


state 4

    1 source: source_item_set .
    4 source_item_set: source_item_set . source_item

    DEF  shift, and go to state 1

    $default  reduce using rule 1 (source)

    source_item  go to state 10
    func_def     go to state 5


state 5

    2 source_item: func_def .

    $default  reduce using rule 2 (source_item)


state 6

   99 identifier: IDENTIFIER .

    $default  reduce using rule 99 (identifier)


state 7

    5 func_def: DEF func_signature . statement_set END
    6         | DEF func_signature . END

    IDENTIFIER  shift, and go to state 6
    IF          shift, and go to state 11
    BEGIN_T     shift, and go to state 12
    END         shift, and go to state 13
    WHILE       shift, and go to state 14
    UNTIL       shift, and go to state 15
    BREAK       shift, and go to state 16
    UMINUS      shift, and go to state 17
    BOOL_VAL    shift, and go to state 18
    STRING_VAL  shift, and go to state 19
    CHAR_VAL    shift, and go to state 20
    HEX_VAL     shift, and go to state 21
    BITS_VAL    shift, and go to state 22
    DEC_VAL     shift, and go to state 23
    '{'         shift, and go to state 24
    '('         shift, and go to state 25

    statement            go to state 26
    statement_set        go to state 27
    selection_statement  go to state 28
    iteration_statement  go to state 29
    block_statement      go to state 30
    primary_expr         go to state 31
    postfix_expr         go to state 32
    unary_expr           go to state 33
    multiplicative_expr  go to state 34
    additive_expr        go to state 35
    relational_expr      go to state 36
    equality_expr        go to state 37
    logical_and_expr     go to state 38
    logical_or_expr      go to state 39
    assignment_expr      go to state 40
    unary_operator       go to state 41
    literal              go to state 42
    identifier           go to state 43


state 8

   78 func_signature: identifier . '(' arg_def_list ')'
   79               | identifier . EMPTY_BRACKETS
   80               | identifier . '(' arg_def_list ')' OF type_ref
   81               | identifier . EMPTY_BRACKETS OF type_ref

    EMPTY_BRACKETS  shift, and go to state 44
    '('             shift, and go to state 45


state 9

    0 $accept: source $end .

    $default  accept


state 10

    4 source_item_set: source_item_set source_item .

    $default  reduce using rule 4 (source_item_set)


state 11

   18 selection_statement: IF . assignment_expr THEN statement ELSE statement
   19                    | IF . assignment_expr THEN statement

    IDENTIFIER  shift, and go to state 6
    UMINUS      shift, and go to state 17
    BOOL_VAL    shift, and go to state 18
    STRING_VAL  shift, and go to state 19
    CHAR_VAL    shift, and go to state 20
    HEX_VAL     shift, and go to state 21
    BITS_VAL    shift, and go to state 22
    DEC_VAL     shift, and go to state 23
    '('         shift, and go to state 25

    primary_expr         go to state 31
    postfix_expr         go to state 32
    unary_expr           go to state 33
    multiplicative_expr  go to state 34
    additive_expr        go to state 35
    relational_expr      go to state 36
    equality_expr        go to state 37
    logical_and_expr     go to state 38
    logical_or_expr      go to state 39
    assignment_expr      go to state 46
    unary_operator       go to state 41
    literal              go to state 42
    identifier           go to state 43


state 12

   26 block_statement: BEGIN_T . in_block_set END
   27                | BEGIN_T . in_block_set '}'
   30                | BEGIN_T . END
   31                | BEGIN_T . '}'

    IDENTIFIER  shift, and go to state 6
    IF          shift, and go to state 11
    BEGIN_T     shift, and go to state 12
    END         shift, and go to state 47
    WHILE       shift, and go to state 14
    UNTIL       shift, and go to state 15
    BREAK       shift, and go to state 16
    DEF         shift, and go to state 1
    UMINUS      shift, and go to state 17
    BOOL_VAL    shift, and go to state 18
    STRING_VAL  shift, and go to state 19
    CHAR_VAL    shift, and go to state 20
    HEX_VAL     shift, and go to state 21
    BITS_VAL    shift, and go to state 22
    DEC_VAL     shift, and go to state 23
    '}'         shift, and go to state 48
    '{'         shift, and go to state 24
    '('         shift, and go to state 25

    source_item          go to state 49
    func_def             go to state 5
    statement            go to state 50
    in_block_set         go to state 51
    selection_statement  go to state 28
    iteration_statement  go to state 29
    block_statement      go to state 30
    primary_expr         go to state 31
    postfix_expr         go to state 32
    unary_expr           go to state 33
    multiplicative_expr  go to state 34
    additive_expr        go to state 35
    relational_expr      go to state 36
    equality_expr        go to state 37
    logical_and_expr     go to state 38
    logical_or_expr      go to state 39
    assignment_expr      go to state 40
    unary_operator       go to state 41
    literal              go to state 42
    identifier           go to state 43


state 13

    6 func_def: DEF func_signature END .

    $default  reduce using rule 6 (func_def)


state 14

   20 iteration_statement: WHILE . assignment_expr statement_set END
   21                    | WHILE . assignment_expr END

    IDENTIFIER  shift, and go to state 6
    UMINUS      shift, and go to state 17
    BOOL_VAL    shift, and go to state 18
    STRING_VAL  shift, and go to state 19
    CHAR_VAL    shift, and go to state 20
    HEX_VAL     shift, and go to state 21
    BITS_VAL    shift, and go to state 22
    DEC_VAL     shift, and go to state 23
    '('         shift, and go to state 25

    primary_expr         go to state 31
    postfix_expr         go to state 32
    unary_expr           go to state 33
    multiplicative_expr  go to state 34
    additive_expr        go to state 35
    relational_expr      go to state 36
    equality_expr        go to state 37
    logical_and_expr     go to state 38
    logical_or_expr      go to state 39
    assignment_expr      go to state 52
    unary_operator       go to state 41
    literal              go to state 42
    identifier           go to state 43


state 15

   22 iteration_statement: UNTIL . assignment_expr statement_set END
   23                    | UNTIL . assignment_expr END

    IDENTIFIER  shift, and go to state 6
    UMINUS      shift, and go to state 17
    BOOL_VAL    shift, and go to state 18
    STRING_VAL  shift, and go to state 19
    CHAR_VAL    shift, and go to state 20
    HEX_VAL     shift, and go to state 21
    BITS_VAL    shift, and go to state 22
    DEC_VAL     shift, and go to state 23
    '('         shift, and go to state 25
